--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
-        <h1>El Diablo</h1>
+        <div class="slides"></div>
     <!-- build:js scripts/amd-app.js -->
     <script data-main="scripts/main" src="scripts/vendor/require.js"></script>
     <!-- endbuild -->
