--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,8 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        
+        <link rel="stylesheet" href="components/normalize-css/normalize.css">
+        <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet'>
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
