--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     </head>
     <body>
         <div class="slides"></div>
+        
+        <script src="scripts/slides.js"></script>
     <!-- build:js scripts/amd-app.js -->
     <script data-main="scripts/main" src="scripts/vendor/require.js"></script>
     <!-- endbuild -->
